--- a/lynora/frontend/index.html
+++ b/lynora/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LYNORA - Real-Time Micro-Markets</title>
+    <title>LYNORA - Real Time Prediction Markets</title>
     <meta name="description" content="Decentralized prediction markets powered by Massa blockchain" />
   </head>
   <body>
